--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <button class="s" id="toggleButton">Instructions</button>
              
                 <button class="s" onclick="activateDotsMode()">Create</button>
-                <button class="s" onclick="clearScreen()">Clear</button>
+                <button class="s" id="clearButton">Clear</button>
                 <button class="s">
                   <a href="https://www.letsunbound.com/game-page"
                   style="color: rgb(0, 0, 0); text-decoration: none;">Back</a>
